Extract recording code into a function

--- a/record_audio.ipynb
+++ b/record_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,25 +25,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "attempt = 0\n",
-    "name = \"gian\"\n",
+    "#attempt = 0\n",
+    "#name = \"gian\"\n",
+    "name = \"khaled\"\n",
     "duration = 2\n",
-    "rec_rate = 22050 # sample rate of the provided recordings\n",
+    "rec_rate = 8000 # sample rate of the provided recordings\n",
     "recordings_dir = \"my_recordings/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not os.path.isdir(recordings_dir):\n",
     "    os.makedirs(recordings_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_recordings(number_of_recordings, number):\n",
+    "    i=0\n",
+    "    while i < number_of_recordings:\n",
+    "        print(f\"Recording number {number}\")\n",
+    "        filename = recordings_dir+\"_\".join([str(number), name, str(i)])+\".wav\"\n",
+    "        print(f\"\\nAttempt: {i}\")\n",
+    "        print(\"Ready in 3...\", end = \"\")\n",
+    "        time.sleep(1)\n",
+    "        print(\"2...\", end = \"\")\n",
+    "        time.sleep(1)\n",
+    "        print(\"1...\")\n",
+    "        time.sleep(1)\n",
+    "        print(\"Go.\")\n",
+    "        rec = sd.rec(int(duration * rec_rate), samplerate=rec_rate, channels=1, blocking=True)\n",
+    "        print(\"Playing the recording.\")\n",
+    "        sd.play(rec, rec_rate)\n",
+    "\n",
+    "        # after hearing the recording, decide whether to record it again or continue to next number\n",
+    "        # if you type anything, record again\n",
+    "        # if you press enter, save current recording & go to next number\n",
+    "        ok = input(\"OK?\")\n",
+    "        if ok == \"\":\n",
+    "            librosa.output.write_wav(filename, rec, rec_rate)\n",
+    "            i += 1\n",
+    "        ipd.clear_output(wait=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recording attempt 0\n",
+      "\n",
+      "NUMBER: 9\n",
+      "Ready in 3...2...1...\n",
+      "Go.\n",
+      "Playing the recording.\n",
+      "OK?\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_recordings(10, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recording number 1\n",
+      "\n",
+      "Attempt: 9\n",
+      "Ready in 3...2...1...\n",
+      "Go.\n",
+      "Playing the recording.\n",
+      "OK?\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_recordings(10, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_recordings(10, 9)"
    ]
   },
   {
@@ -60,6 +212,7 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
     "i = 0\n",
     "while i < 10:\n",
     "    print(f\"Recording attempt {attempt}\")\n",
@@ -84,7 +237,8 @@
     "        librosa.output.write_wav(filename, rec, rec_rate)\n",
     "        i += 1\n",
     "    ipd.clear_output(wait=True)\n",
-    "print(\"DONE\")"
+    "print(\"DONE\")\n",
+    "\"\"\""
    ]
   },
   {
@@ -96,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,18 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6feab19a40cd4bcca3d91ac13bc858dc",
+       "model_id": "d8ad6313d19d4829bd0321a1a38b5fcf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=10.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=20.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -175,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -183,12 +337,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16e42272929344259fbf9943239d2e9e",
+       "model_id": "84b0ad9ac5d64bbfbbc1b8d767e82b1b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=10.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=20.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -204,19 +358,29 @@
     {
      "data": {
       "text/plain": [
-       "[0.5657596371882087,\n",
-       " 0.4443537414965986,\n",
-       " 0.2257142857142857,\n",
-       " 0.2531972789115646,\n",
-       " 0.3271201814058957,\n",
-       " 0.5336961451247165,\n",
-       " 0.4544671201814059,\n",
-       " 0.583718820861678,\n",
-       " 0.3543310657596372,\n",
-       " 0.5040816326530613]"
+       "[0.5834013605442177,\n",
+       " 0.7422675736961452,\n",
+       " 0.6167800453514739,\n",
+       " 0.9937868480725623,\n",
+       " 0.5741496598639456,\n",
+       " 0.40739229024943313,\n",
+       " 0.6452607709750567,\n",
+       " 0.8965079365079365,\n",
+       " 0.553015873015873,\n",
+       " 0.849750566893424,\n",
+       " 1.1196371882086167,\n",
+       " 0.9055328798185941,\n",
+       " 0.8688888888888889,\n",
+       " 1.9275283446712017,\n",
+       " 0.7507936507936508,\n",
+       " 0.6072562358276644,\n",
+       " 0.7088888888888889,\n",
+       " 0.46190476190476193,\n",
+       " 0.6179138321995464,\n",
+       " 0.6786394557823129]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,29 +398,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a933704a4a82423db992e1a7972a40a3",
+       "model_id": "9bcc9c730668490da5584db1747d517d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=10.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=20.0), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -266,6 +423,13 @@
     "    sd.play(rec, rec_rate)\n",
     "    time.sleep(1) # without this, the audio cannot be heard..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -284,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
