Fix recording filename definition, again

--- a/record_audio.ipynb
+++ b/record_audio.ipynb
@@ -57,7 +57,7 @@
     "    i=0\n",
     "    while i < number_of_recordings:\n",
     "        print(f\"Recording number {number}\")\n",
-    "        filename = recordings_dir+\"_\".join([str(i), name, str(number)])+\".wav\"\n",
+    "        filename = recordings_dir+\"_\".join([str(number), name, str(i)])+\".wav\"\n",
     "        print(f\"\\nAttempt: {i}\")\n",
     "        print(\"Ready in 3...\", end = \"\")\n",
     "        time.sleep(1)\n",
