Change data loading function to avoid loading features twice

--- a/simple_audio_classifier.ipynb
+++ b/simple_audio_classifier.ipynb
@@ -8,8 +8,9 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "from time import time\n",
+    "import time\n",
     "from scipy.io import wavfile as wav\n",
+    "import sys\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -24,7 +25,8 @@
     "# Feature audio avanzate\n",
     "import librosa\n",
     "import librosa.display as lid\n",
-    "from sklearn.preprocessing import scale"
+    "from sklearn.preprocessing import scale\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -33,50 +35,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Segnaposto per feature extractor\n",
-    "def identity(input):\n",
-    "    return input\n",
+    "def load_features(feature_extractor=lambda x : x, paths = [\"recordings\"], normalize=False):\n",
     "\n",
-    "# Data loader\n",
-    "def load_data(feature_extractor=identity, paths = [\"recordings\"], label_type = \"number\", normalize=False):\n",
-    "\n",
-    "    labels = []\n",
     "    features = []\n",
     "    \n",
     "    for path in paths:\n",
-    "        print(f\"Loading from {path}\")\n",
-    "        # for filename in os.listdir(i):\n",
-    "        #     with open(os.path.join(i, filename), 'r') as filedata:\n",
-    "        #         string = \"\".join(filedata.read().split())\n",
-    "     \n",
+    "        print(f\"Loading from {path}\")    \n",
     "        for f in tqdm(sorted(os.listdir(path))):\n",
     "            if f.endswith('.wav'):\n",
     "                # Carica file ed estraine le features\n",
     "                _, signal = wav.read(path + \"/\" + f)\n",
     "                cur_features = feature_extractor(signal)\n",
     "                features.append(cur_features)\n",
-    "                \n",
-    "                # Categorie\n",
+    "\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_labels(paths = [\"recordings\"], label_type = \"number\"):\n",
+    "\n",
+    "    labels = []\n",
+    "    \n",
+    "    for path in paths:\n",
+    "        for f in sorted(os.listdir(path)):\n",
+    "            if f.endswith('.wav'):\n",
     "                if label_type.startswith(\"n\"):\n",
     "                    label = f.split('_')[0]\n",
     "                else:\n",
     "                    label = f.split('_')[1]\n",
     "                labels.append(label)\n",
     "\n",
-    "    # X: features, y: labels\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.1, random_state=1)\n",
-    "\n",
-    "    if normalize:\n",
-    "        eps = 0.001\n",
-    "        X_train = np.array(X_train)\n",
-    "        X_train_mean = X_train.mean(axis=0)\n",
-    "        X_train_std = X_train.std(axis=0)\n",
-    "        X_train = (X_train - X_train_mean + eps)/(X_train_std + eps)\n",
-    "        X_train = [row for row in X_train]\n",
-    "\n",
-    "        X_test = [row for row in (np.array(X_test) - X_train_mean + eps)/(X_train_std + eps)]\n",
-    "\n",
-    "    return X_train, X_test, y_train, y_test"
+    "    return labels"
    ]
   },
   {
@@ -88,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c90ac41f83044749b6bfdc90b7a750c0",
+       "model_id": "f2c1fae27d2f4bb4bd4e05380acd7833",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,12 +205,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bea116d263f452b89da13049f4f38a8",
+       "model_id": "458f065b5056405d8ea49f3bb62881f3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=160.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=300.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -231,9 +225,7 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = load_data(feature_extractor=combo,\n",
-    "                                             paths=[\"recordings\", \"output\"],\n",
-    "                                             normalize=True)"
+    "features = load_features(feature_extractor=combo, paths=[\"recordings\", \"output\"])"
    ]
   },
   {
@@ -242,25 +234,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = SVC(kernel='rbf', class_weight='balanced')"
+    "labels1 = load_labels(paths=[\"recordings\", \"output\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gianc\\Anaconda3\\envs\\dsim\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
-      "  \"avoid this warning.\", FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clf = clf.fit(X_train, y_train)"
+    "X_train, X_test, y_train1, y_test1 = train_test_split(features, labels1, test_size=0.2, random_state=1)"
    ]
   },
   {
@@ -269,12 +252,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = clf.predict(X_test)"
+    "scaler1 = StandardScaler()\n",
+    "scaler1.fit(X_train)\n",
+    "X_train_scaled = scaler1.transform(X_train)\n",
+    "X_test_scaled = scaler1.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf1 = SVC(kernel='rbf', class_weight='balanced', gamma=\"auto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf1 = clf1.fit(X_train_scaled, y_train1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred1 = clf1.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -283,26 +296,26 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.95      0.97        19\n",
-      "           1       0.95      0.95      0.95        19\n",
-      "           2       0.94      0.84      0.89        19\n",
-      "           3       0.82      0.93      0.87        15\n",
-      "           4       1.00      0.94      0.97        18\n",
-      "           5       1.00      1.00      1.00        13\n",
-      "           6       0.80      1.00      0.89        12\n",
-      "           7       1.00      1.00      1.00        15\n",
-      "           8       0.94      0.94      0.94        18\n",
-      "           9       1.00      0.94      0.97        18\n",
+      "           0       0.94      0.97      0.96        34\n",
+      "           1       1.00      0.92      0.96        37\n",
+      "           2       0.98      0.98      0.98        42\n",
+      "           3       0.89      1.00      0.94        25\n",
+      "           4       1.00      0.95      0.97        40\n",
+      "           5       1.00      1.00      1.00        33\n",
+      "           6       0.81      0.95      0.88        37\n",
+      "           7       1.00      1.00      1.00        34\n",
+      "           8       1.00      0.97      0.99        37\n",
+      "           9       1.00      0.90      0.95        41\n",
       "\n",
-      "    accuracy                           0.95       166\n",
-      "   macro avg       0.95      0.95      0.95       166\n",
-      "weighted avg       0.95      0.95      0.95       166\n",
+      "    accuracy                           0.96       360\n",
+      "   macro avg       0.96      0.96      0.96       360\n",
+      "weighted avg       0.97      0.96      0.96       360\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test1, y_pred1))"
    ]
   },
   {
@@ -314,106 +327,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading from recordings\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fac0a2ca8314847b799772d2ea06ef2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1500.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Loading from output\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf07496547734035a2de52dcfe86b4d4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=160.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train, X_test, y_train, y_test = load_data(feature_extractor=combo,\n",
-    "                                             paths=[\"recordings\", \"output\"],\n",
-    "                                             label_type = \"speaker\",\n",
-    "                                             normalize=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = SVC(kernel='rbf', class_weight='balanced')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gianc\\Anaconda3\\envs\\dsim\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
-      "  \"avoid this warning.\", FutureWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "clf = clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = clf.predict(X_test)"
+    "labels2 = load_labels(paths=[\"recordings\", \"output\"], label_type=\"spearker\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train2, y_test2 = train_test_split(features, labels2, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler2 = StandardScaler()\n",
+    "scaler2.fit(X_train)\n",
+    "X_train_scaled = scaler2.transform(X_train)\n",
+    "X_test_scaled = scaler2.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf2 = SVC(kernel='rbf', class_weight='balanced', gamma=\"auto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf2 = clf2.fit(X_train_scaled, y_train2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = clf2.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -422,22 +393,138 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      alinda       1.00      1.00      1.00         5\n",
-      "        gian       1.00      1.00      1.00         4\n",
-      "     jackson       0.98      1.00      0.99        57\n",
-      "      khaled       0.71      1.00      0.83         5\n",
-      "     nicolas       1.00      1.00      1.00        48\n",
-      "        theo       1.00      0.94      0.97        47\n",
+      "      alinda       1.00      0.95      0.98        21\n",
+      "        gian       1.00      1.00      1.00        17\n",
+      "     jackson       0.99      0.99      0.99        88\n",
+      "      khaled       0.76      1.00      0.86        22\n",
+      "     nicolas       1.00      1.00      1.00       110\n",
+      "        theo       1.00      0.94      0.97       102\n",
       "\n",
-      "    accuracy                           0.98       166\n",
-      "   macro avg       0.95      0.99      0.97       166\n",
-      "weighted avg       0.99      0.98      0.98       166\n",
+      "    accuracy                           0.98       360\n",
+      "   macro avg       0.96      0.98      0.97       360\n",
+      "weighted avg       0.98      0.98      0.98       360\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test2, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediction on the spot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sounddevice as sd\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_recording(duration, rec_rate, name = \"test.wav\", output_dir = \"test/\"):\n",
+    "    print(\"Ready in 3...\", end = \"\")\n",
+    "    time.sleep(1)\n",
+    "    print(\"2...\", end = \"\")\n",
+    "    time.sleep(1)\n",
+    "    print(\"1...\")\n",
+    "    time.sleep(1)\n",
+    "    print(\"Go.\")\n",
+    "    rec = sd.rec(int(duration * rec_rate), samplerate=rec_rate, channels=1, blocking=True)\n",
+    "    print(\"Playing the recording.\")\n",
+    "    sd.play(rec, rec_rate)\n",
+    "\n",
+    "    # after hearing the recording, decide whether to record it again or continue to next number\n",
+    "    # if you type anything, record again\n",
+    "    # if you press enter, save current recording & go to next number\n",
+    "    ok = input(\"OK?\")\n",
+    "    if ok == \"\":\n",
+    "        librosa.output.write_wav(output_dir+name, rec, rec_rate)\n",
+    "        return rec\n",
+    "    ipd.clear_output(wait=True)\n",
+    "    create_recording(duration, rec_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trim_audio(file, input_dir=\"test/\", output_dir=\"test/\", db=-48):\n",
+    "\n",
+    "    if not os.path.isdir(input_dir):\n",
+    "        print(f\"There should be an input \\\"{input_dir}\\\" directory.\")\n",
+    "        sys.exit(0)\n",
+    "    \n",
+    "    # create output directory if not there yet\n",
+    "    if not os.path.isdir(output_dir):\n",
+    "        os.makedirs(output_dir)\n",
+    "        \n",
+    "    temp1 = output_dir+\"temp1.wav\"\n",
+    "    temp2 = output_dir+\"temp2.wav\"\n",
+    "    temp3 = output_dir+\"temp3.wav\"\n",
+    " \n",
+    "    subprocess.run([\"ffmpeg\", \"-y\", \"-i\", input_dir+file, \"-af\", f\"silenceremove=1:0:{db}dB\", temp1])\n",
+    "    subprocess.run([\"ffmpeg\", \"-y\", \"-i\", temp1, \"-af\", \"areverse\", temp2])\n",
+    "    subprocess.run([\"ffmpeg\", \"-y\", \"-i\", temp2, \"-af\", f\"silenceremove=1:0.1:{db}dB\", temp3])\n",
+    "    subprocess.run([\"ffmpeg\", \"-y\", \"-i\", temp3, \"-af\", \"areverse\", output_dir+file])\n",
+    "    \n",
+    "    os.remove(temp1)\n",
+    "    os.remove(temp2)\n",
+    "    os.remove(temp3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_classifiers(clfs, scalers, duration=2, rec_rate=8000, directory = \"test/\", filename = \"test.wav\"):\n",
+    "    create_recording(duration, rec_rate, filename, directory)   \n",
+    "    ipd.clear_output()\n",
+    "    trim_audio(filename, directory, directory)\n",
+    "    _, rec = wav.read(\"test\" + \"/\" + \"test.wav\")\n",
+    "    # sd.play(rec, rec_rate)\n",
+    "    rec_features = combo(rec.flatten())\n",
+    "    scaled_features = [0]*len(clfs)\n",
+    "    preds = scaled_features\n",
+    "    for i in range(len(clfs)):\n",
+    "        scaled_features[i] = scalers[i].transform([rec_features])\n",
+    "        preds[i] = clfs[i].predict(scaled_features[i])[0]\n",
+    "        print(\"Classifier {} prediction: {}\".format(i+1, preds[i]))\n",
+    "    return preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier 1 prediction: 7\n",
+      "Classifier 2 prediction: gian\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = test_classifiers([clf1, clf2], [scaler1, scaler2])"
    ]
   }
  ],
