Fix bug in loading wav file

--- a/Data augmentation pipeline.ipynb
+++ b/Data augmentation pipeline.ipynb
@@ -653,10 +653,10 @@
    "source": [
     "def enrich_dataset(audio_dir, mode, n_noise, n_pitch):\n",
     "    enriched_audio_tracks = []\n",
-    "    for audio in os.listdir(audio_dir):\n",
+    "    for audio_fn in os.listdir(audio_dir):\n",
     "        # Skip temporary files\n",
-    "        if audio.endswith(\".wav\"):\n",
-    "            _, original_signal = wav.read(fn)\n",
+    "        if audio_fn.endswith(\".wav\"):\n",
+    "            _, original_signal = wav.read(audio_fn)\n",
     "            current_enriched_tracks = []\n",
     "            # add the original track\n",
     "            current_enriched_tracks.append(original_signal)\n",
@@ -688,7 +688,7 @@
     "\n",
     "            # Let's now store the enriched tracks obtained for the current original audio\n",
     "            enriched_audio_tracks = enriched_audio_tracks + current_enriched_tracks\n",
-    "    return enriched_audio_tracks"
+    "    return enriched_audio_tracks\n"
    ]
   },
   {
