Store recordings in appropriate folder

--- a/Data augmentation pipeline.ipynb
+++ b/Data augmentation pipeline.ipynb
@@ -756,7 +756,7 @@
    ],
    "source": [
     "%%time\n",
-    "res = enrich_dataset(audio_dir,\n",
+    "all_comb_augmentation = enrich_dataset(audio_dir,\n",
     "                     mode=\"all_combinations\",\n",
     "                     n_noise=5,\n",
     "                     n_pitch=5)"
@@ -776,11 +776,11 @@
    "outputs": [],
    "source": [
     "n_tracks = 0\n",
-    "for fn in res.keys():\n",
-    "    n_tracks += len(res[fn]['original'])\n",
-    "    n_tracks += len(res[fn]['noise'])\n",
-    "    n_tracks += len(res[fn]['pitch'])\n",
-    "    n_tracks += len(res[fn]['pitch_noise'])"
+    "for fn in all_comb_augmentation.keys():\n",
+    "    n_tracks += len(all_comb_augmentation[fn]['original'])\n",
+    "    n_tracks += len(all_comb_augmentation[fn]['noise'])\n",
+    "    n_tracks += len(all_comb_augmentation[fn]['pitch'])\n",
+    "    n_tracks += len(all_comb_augmentation[fn]['pitch_noise'])"
    ]
   },
   {
@@ -833,7 +833,7 @@
    ],
    "source": [
     "%%time\n",
-    "res = enrich_dataset(audio_dir,\n",
+    "normal_augmentation = enrich_dataset(audio_dir,\n",
     "                     mode=\"normal\",\n",
     "                     n_noise=5,\n",
     "                     n_pitch=5)"
@@ -846,10 +846,10 @@
    "outputs": [],
    "source": [
     "n_tracks = 0\n",
-    "for fn in res.keys():\n",
-    "    n_tracks += len(res[fn]['original'])\n",
-    "    n_tracks += len(res[fn]['noise'])\n",
-    "    n_tracks += len(res[fn]['pitch'])"
+    "for fn in normal_augmentation.keys():\n",
+    "    n_tracks += len(normal_augmentation[fn]['original'])\n",
+    "    n_tracks += len(normal_augmentation[fn]['noise'])\n",
+    "    n_tracks += len(normal_augmentation[fn]['pitch'])"
    ]
   },
   {
@@ -877,6 +877,110 @@
    "metadata": {},
    "source": [
     "## TO DO: Store dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def store_list_recordings(track_list, augmentation_strategy, augmentation_dir, base_fn):\n",
+    "    extension = \".wav\"\n",
+    "    augmentation_fn_structure = \"{directory}/{base_fn}_{augmentation_strategy}_{n}{extension}\"\n",
+    "    for i,track in enumerate(track_list):\n",
+    "        librosa.output.write_wav(augmentation_fn_structure.format(directory=augmentation_dir,\n",
+    "                                                                  base_fn=base_fn,\n",
+    "                                                                  augmentation_strategy=augmentation_strategy,\n",
+    "                                                                  n=i,\n",
+    "                                                                  extension=extension),\n",
+    "                                 track,\n",
+    "                                 SAMPLING_RATE)\n",
+    "def store_recordings(augmentation_dir, recordings):\n",
+    "    for original_fn in recordings.keys():\n",
+    "        current_fn_recordings = recordings[original_fn]\n",
+    "        base_fn = original_fn.replace(extension,\"\")\n",
+    "        #Store original recording\n",
+    "        librosa.output.write_wav(\"{directory}/{fn}\".format(directory=augmentation_dir,\n",
+    "                                                           fn=test_fn),\n",
+    "                                 current_fn_recordings['original'][0],\n",
+    "                                 SAMPLING_RATE)\n",
+    "        #Store noise recordings\n",
+    "#        for i,noise_track in enumerate(current_fn_recordings['noise']):\n",
+    "#            librosa.output.write_wav(augmentation_fn_structure.format(directory=augmentation_dir,\n",
+    "#                                                                      base_fn=base_fn,\n",
+    "#                                                                      augmentation_strategy=\"noise\",\n",
+    "#                                                                      n=i,\n",
+    "#                                                                      extension=extension),\n",
+    "#                                     noise_track,\n",
+    "#                                     SAMPLING_RATE)\n",
+    "        store_list_recordings(current_fn_recordings['noise'], \"noise\", augmentation_dir, base_fn)\n",
+    "        #Store pitch recordings\n",
+    "#        for i,pitch_track in enumerate(current_fn_recordings['pitch']):\n",
+    "#            librosa.output.write_wav(augmentation_fn_structure.format(directory=augmentation_dir,\n",
+    "#                                                                      base_fn=base_fn,\n",
+    "#                                                                      augmentation_strategy=\"pitch\",\n",
+    "#                                                                      n=i,\n",
+    "#                                                                      extension=extension),\n",
+    "#                                     pitch_track,\n",
+    "#                                     SAMPLING_RATE)\n",
+    "        store_list_recordings(current_fn_recordings['pitch'], \"pitch\", augmentation_dir, base_fn)\n",
+    "        # Check if combination of pitch and noise were created\n",
+    "        if \"pitch_noise\" in current_fn_recordings.keys():\n",
+    "            #Store pitch recordings\n",
+    "            for i,pitch_noise_track in enumerate(current_fn_recordings['pitch_noise']):\n",
+    "                librosa.output.write_wav(augmentation_fn_structure.format(directory=augmentation_dir,\n",
+    "                                                                          base_fn=base_fn,\n",
+    "                                                                          augmentation_strategy=\"pitch_noise\",\n",
+    "                                                                          n=i,\n",
+    "                                                                          extension=extension),\n",
+    "                                         pitch_noise_track,\n",
+    "                                         SAMPLING_RATE)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! rm -rf ./augmentation_recs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! mkdir ./augmentation_recs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store_recordings(\"./augmentation_recs\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    3001\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls ./augmentation_recs | wc -l"
    ]
   },
   {
