--- a/Data augmentation pipeline.ipynb
+++ b/Data augmentation pipeline.ipynb
@@ -651,12 +651,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def enrich_dataset(audio_dir, mode, n_noise, n_pitch):\n",
+    "def enrich_dataset(audio_dir, mode, n_noise, n_pitch, rate=8000):\n",
     "    enriched_audio_tracks = {}\n",
     "    for audio_fn in os.listdir(audio_dir):\n",
     "        # Skip temporary files\n",
     "        if audio_fn.endswith(\".wav\"):\n",
-    "            _, original_signal = wav.read(os.path.join(audio_dir,audio_fn))\n",
+    "            # _, original_signal = wav.read(os.path.join(audio_dir,audio_fn))\n",
+    "            original_signal, _ = librosa.core.load(os.path.join(audio_dir,audio_fn), rate)\n",
     "            # Create an empty dict for storing the various tracks associated with the current file\n",
     "            enriched_audio_tracks[audio_fn] = {}\n",
     "            # Add the current audio\n",
@@ -1034,7 +1035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
